apps/homepage/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-homepage
  hostnames:
    - homepage.stevevaradi.me
  rules:
    - backendRefs:
        - name: homepage
          port: 80
